tests/NormalTests/paczka1/fuzzy1/74580427.err
Error in line 1: S443 A583 88,7
Error in line 9: GOtGUydD A957 79,7
Error in line 13: GOtGUydD A583 4,6
Error in line 19: TnpPqRdhaj S443 88,4
Error in line 30: KHyC3qSb S443 50,7
Error in line 29: GOtGUydD A957 61,3
Error in line 34: KHyC3qSb A583 36,4
